--- a/Proje/appsettings.json
+++ b/Proje/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+  "ConnectionStrings": {  "conn" : "data source =.; initial catalog=Proje ; integrated security= true " }
 }
