--- a/Proje/appsettings.json
+++ b/Proje/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*", 
-  "ConnectionStrings": {  "conn" : "data source =.; initial catalog=Proje ; integrated security= true " }
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Default": "Server=(localdb)\\mssqllocaldb;Database=Shows;Trusted_Connection=True;MultipleActiveResultSets=true" }
 }
