aligning the Creat operation ... traslation operation

--- a/Proje/Proje.csproj
+++ b/Proje/Proje.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Views\Home\" />
+    <Folder Include="Resources\Views\Movies\" />
+    <Folder Include="Resources\Views\Shared\" />
+    <Folder Include="Resources\Views\TvShows\" />
+  </ItemGroup>
+
 </Project>
