--- a/Proje/Proje.csproj
+++ b/Proje/Proje.csproj
@@ -20,17 +20,19 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Resources\Views\Account\" />
-    <Folder Include="Resources\Views\Animes\" />
-    <Folder Include="Resources\Views\Home\" />
-    <Folder Include="Resources\Views\Movies\" />
-    <Folder Include="Resources\Views\Shared\" />
-    <Folder Include="Resources\Views\TvShows\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Views\Animes\Delete.tr.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
