added many to many realtionship to Movies and TvShows, Views adjusments

--- a/Proje/Proje.csproj
+++ b/Proje/Proje.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Resources\Views\Account\" />
     <Folder Include="Resources\Views\Animes\" />
     <Folder Include="Resources\Views\Home\" />
